@@ -164,6 +164,7 @@ CONFIGURE OPTIONS
 
           MWM-hints
           EWMH-hints (pid, utf8 names) and protocols (ping)
+          urgency hint
           seperate underline colour (-underlineColor)
           settable border widths and borderless switch (-w, -b, -bl)
           visual depth selection (-depth)
